<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/weatherET"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints="true"
        android:ems="10"
        android:background="@drawable/edittext"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="#000000"
        android:hint="@string/enter_city_name"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/checkWeatherBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/check_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherET"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_min"
        android:textColor="#373F40"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkWeatherBtn"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textColor="#373F40"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkWeatherBtn"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/showTempTxt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textview"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMin"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/showTempMinTxt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textview"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMin"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_max"
        android:textColor="#373F40"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkWeatherBtn"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/showTempMaxTxt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textview"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMax"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textColor="#373F40"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkWeatherBtn"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textview"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMin"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="#373F40"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkWeatherBtn"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/pressureTxt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textview"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMin"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="#373F40"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkWeatherBtn"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/humidityTxt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textview"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMin"
        app:layout_constraintVertical_bias="0.31" />

</androidx.constraintlayout.widget.ConstraintLayout>